# nlodis

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
docs/: Doxyfile
src/: CMakeLists.txt  datatypes.cpp  datatypes.hpp  integration.cpp  integration.hpp  lo.cpp  main.cpp  nlodis.cpp  nlodis.hpp  nlodishelper.cpp  nlodishelper_longitudinal.cpp  nlodishelper_transverse.cpp  qcd.cpp  qcd.hpp
src/dipole/: dipoleamplitude.cpp  dipoleamplitude.hpp  vector.cpp  vector.hpp
src/dipole/bkdipole/: bkdipole.cpp  bkdipole.hpp  datafile.cpp  datafile.hpp  interpolation.cpp  interpolation.hpp
src/tests/: test_interpolation.cpp  test_massivedishelpers.cpp  test_nlodis_helpers.cpp  tests.cpp  vector_tests.cpp
src/tests/compute_test_data/: massivenlodis_functions.ipynb
